Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101724

Application crash when trigger QWebEnginePage::triggerAction( QWebEnginePage::InspectElement )

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.2.5, 6.3.1, 6.4.0 Beta1
    • 6.2.3
    • WebEngine
    • None
    • windows 10.
    • e8e381119c (qt/qtwebengine/dev) 84ef53a95a (qt/qtwebengine/6.2) 8cc10f1d35 (qt/qtwebengine/6.3) 84ef53a95a (qt/qtwebengine/6.2) 84ef53a95a (qt/qtwebengine/6.2) 84ef53a95a (qt/tqtc-qtwebengine/6.2) 8cc10f1d35 (qt/qtwebengine/6.3.1)

      this following method can crash application on qt6.2.3

      triggerAction( QWebEnginePage::InspectElement )
      

      attach example can reproduce the crash.      press F12 to trigger

      the example can work well on qt5.15.2

        For Gerrit Dashboard: QTBUG-101724
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            xiaoyifang yifang xiao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes