Avoid crashing on context free web actions

If a web action that depends on a context is called, do nothing instead
of crashing.

Pick-to: 6.3 6.2
Fixes: QTBUG-101724
Change-Id: I7a0040a58e9dc7fa14f0cae71cf1bcd086b61c54
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>